New installation on two SSDs
- Add full installation scripts and packages list (used for new installation today)
- Switch from truecrypt to full disk encryption (LVM on LUKS)
- Increase tmpfs size
- Start using skylake ck kernel (was incorrectly using ivybridge kernel)
- Use fstrim.timer instead of mounting with discard (periodic instead of
  continuous)
- Start using Colemak-DH in console as well (can't type normal Colemak
  anymore; user password was the only thing I could type in Colemak)

--- a/README.org
+++ b/README.org
@@ -219,14 +219,9 @@ On the other hand, the way NixOS works makes it harder (or impossible) to manual
 As for guix, I see it as a less popular (less packages), more restricted (only libre packages are allowed) version of nix. My laptop won't even work properly with linux-libre, so GuixSD isn't really an option for me. I might prefer to use scheme over the nix DSL, but the nix DSL is pretty simple and good enough for the task I think (especially considering that a lot of package managers just use bash). I'm not sure what major benefits guix has to the end user. The command names for guix seem more reasonable to me, and it has a nice emacs package. On the other hand, it's worth noting that nix is on github, whereas the primary way to interact with the guix community is the mailing list. For these reasons, I have to doubt that guix will ever be useful to more than a small niche of people. I still hope to play around with guix and Sheperd (previously dmd) more in the future and would still recommend looking into guix.
 
 ** Configuration Management/ Installation Automation
-Installing Arch manually every time is needlessly tedious. Automation of this process isn't nearly as nice as on NixOS or GuixSD, but it's not too hard to write a script to do the initial configuration you would always do. The post-install setup is a lot more tedious, especially if you don't remember what packages you normally install. This is why I prefer a declarative setup. Initially I had an ugly bash script do everything before deciding to try using a Configuration Management tool. I'm not that familiar with the different CM tools, but I ended up choosing SaltStack as it seemed to be simpler for what I wanted to do (e.g. yaml files; I did not look too much into ansible though).
+Installing Arch manually every time is needlessly tedious. Automation of this process isn't nearly as nice as on NixOS or GuixSD, but it's not too hard to write a script to automate installation. The post-installation setup is also a lot more tedious on Arch, especially if you don't remember what packages you installed and what setup you performed. This is why I prefer declarative configuration. I'm using bash scripts and SaltStack to do every step of the installation and post-installation setup apart from creating the user and setting the user password (which has to be manual). See [[./root/system-install]] and [[./root/post-install]] for more information. As an alternative, you can generally just copy your entire filesystem instead of doing a new installation (with a few extra steps), but I prefer using scripts so all setup/configuration is explicit.
 
-I'm still using a bash script as a base to do the necessary setup for my salt configuration. It updates the pacman mirrorlist and installs salt, powerpill, and an aur helper (as salt doesn't have a plugin to install aur packages). My salt configuration has formulas for creating my user, setting up my root configuration files, installing all my packages (including those installed by other programs like =nix= and =pip=), and enabling/starting my services. The feedback given by salt is really nice and is one reason I prefer it to just installing a list of packages.
-
-After all this, my bash script just uses [[https://www.gnu.org/software/stow/][stow]] to set up the configuration files in my home directory. I prefer to keep all my dotfiles under =~/dotfiles= since it is less cluttered and means I don't have to make my home directory a git repository. Stow also allows me to have my dotfiles further categorized into sections (e.g. =music=). I've looked at the countless "dotfile managers", and most of them just make things more complicated (e.g. by requiring every managed config file have an entry) or don't allow for categorizing dotfiles into different directories. Stow is simple and does everything I need, so I have no intention of switching to something else.
-
-# TODO
-See [[./root]] for these scripts. I'll add my install and post-install bash scripts once I get the chance to test them more thoroughly.
+I use SaltStack for syncing my root configuration files and  [[https://www.gnu.org/software/stow/][stow]] for symlinking configuration files in my home directory. I prefer to keep all my dotfiles under =~/dotfiles= since it is less cluttered and means I don't have to make my home directory a git repository. Stow also allows categorizing dotfiles into directories (e.g. =music=). I've looked at the countless "dotfile managers," and most of them just make things more complicated (e.g. by requiring every managed config file have an entry) or don't allow for categorizing dotfiles into different directories. Stow is simple and does everything I need, so I have no intention of switching to something else.
 
 ** Window Manager
 This is probably my most selective pick, considering just how many window managers there are (I've tried dozens, many when testing [[https://github.com/noctuid/tdrop][tdrop]]). After finding out about tiling window managers, I used awesome and xmonad with a DE for a while before switching to using just bspwm. I tried herbstluftwm and i3 as well and like them for mostly the same reasons I like bspwm, but bspwm is by far my favorite. The reason is that while it is extremely simple, it is also extremely scriptable and has a lot of advanced functionality if you need it.
@@ -267,9 +262,7 @@ Major TODO items:
 - Clean up all config files and add them here
 - Clean up and add emacs init file
 - Clean up/remove older bash scripts
-- Test/add post-install scripts
 - Fix dual role on keyboardio
-- Switch to veracrypt, borg, and LVM on LUKS
 
 * Interesting Workflow Excerpts
 ** Make Any Terminal Emulator Dropdown Regardless of WM
