Suggest copying connman connection settings to new install

--- a/README.org
+++ b/README.org
@@ -219,7 +219,7 @@ On the other hand, the way NixOS works makes it harder (or impossible) to manual
 As for guix, I see it as a less popular (less packages), more restricted (only libre packages are allowed) version of nix. My laptop won't even work properly with linux-libre, so GuixSD isn't really an option for me. I might prefer to use scheme over the nix DSL, but the nix DSL is pretty simple and good enough for the task I think (especially considering that a lot of package managers just use bash). I'm not sure what major benefits guix has to the end user. The command names for guix seem more reasonable to me, and it has a nice emacs package. On the other hand, it's worth noting that nix is on github, whereas the primary way to interact with the guix community is the mailing list. For these reasons, I have to doubt that guix will ever be useful to more than a small niche of people. I still hope to play around with guix and Sheperd (previously dmd) more in the future and would still recommend looking into guix.
 
 ** Configuration Management/ Installation Automation
-Installing Arch manually every time is needlessly tedious. Automation of this process isn't nearly as nice as on NixOS or GuixSD, but it's not too hard to write a script to automate installation. The post-installation setup is also a lot more tedious on Arch, especially if you don't remember what packages you installed and what setup you performed. This is why I prefer declarative configuration. I'm using bash scripts and SaltStack to do every step of the installation and post-installation setup apart from creating the user and setting the user password (which has to be manual). See [[./root/system-install]] and [[./root/post-install]] for more information. As an alternative, you can generally just copy your entire filesystem instead of doing a new installation (with a few extra steps), but I prefer using scripts so all setup/configuration is explicit.
+Installing Arch manually every time is needlessly tedious. Automation of this process isn't nearly as nice as on NixOS or GuixSD, but it's not too hard to write a script to automate installation. The post-installation setup is also a lot more tedious on Arch, especially if you don't remember what packages you installed and what setup you performed. This is why I prefer declarative configuration. I'm using bash scripts and SaltStack to do every step of the installation and post-installation setup apart from things that have to be manual like partitioning, wifi setup, and creating the user and setting the user password. See [[./root/system-install]] and [[./root/post-install]] for more information. As an alternative, you can generally just copy your entire filesystem instead of doing a new installation (with a few extra steps), but I prefer using scripts so all setup/configuration is explicit.
 
 I use SaltStack for syncing my root configuration files and  [[https://www.gnu.org/software/stow/][stow]] for symlinking configuration files in my home directory. I prefer to keep all my dotfiles under =~/dotfiles= since it is less cluttered and means I don't have to make my home directory a git repository. Stow also allows categorizing dotfiles into directories (e.g. =music=). I've looked at the countless "dotfile managers," and most of them just make things more complicated (e.g. by requiring every managed config file have an entry) or don't allow for categorizing dotfiles into different directories. Stow is simple and does everything I need, so I have no intention of switching to something else.
 
