Emacs - Add no-littering package
Also use use-package for savehist and don't load it during init (it doesn't need
to be called until after init; on the first init when packages are being cloned,
the timer will be called during initialization otherwise, which is unnecessary).
In general, I should move towards using more specific hooks for enabling some of
these modes.

Previously, the directory savehist-file was in was not created by default (which
would cause an error with a clean ~/.emacs.d).

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -480,6 +480,13 @@ Principles:
   :prefix ",")
 #+end_src
 
+** No Littering
+Consistently sets the paths for various configuration, history, temporary, etc. files created by Emacs packages (e.g. =savehist-file=).
+#+begin_src emacs-lisp
+(use-package no-littering
+  :demand t)
+#+end_src
+
 ** Evil and Evil Collection
 #+begin_src emacs-lisp
 (use-package evil
@@ -977,17 +984,17 @@ Persist minibuffer and search history.
 (gsetq history-length 3000
        history-delete-duplicates t)
 
-(gsetq savehist-file "~/.emacs.d/tmp/savehist"
-       ;; default
-       ;; savehist-save-minibuffer-history t
-       savehist-additional-variables '(mark-ring
-                                       global-mark-ring
-                                       search-ring
-                                       regexp-search-ring
-                                       extended-command-history)
-       savehist-autosave-interval 60)
-
-(savehist-mode)
+(use-package savehist
+  :ghook 'after-init-hook
+  :config
+  ;; default
+  ;; savehist-save-minibuffer-history t
+  (gsetq savehist-additional-variables '(mark-ring
+                                         global-mark-ring
+                                         search-ring
+                                         regexp-search-ring
+                                         extended-command-history)
+         savehist-autosave-interval 60))
 #+end_src
 
 ** H Prefix/Help Mode
