Emacs - Only load fcitx package when fcitx is installed

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -3398,6 +3398,7 @@ For typographical editing (not fixing typos).
 ** Fcitx
 #+begin_src emacs-lisp
 (use-package fcitx
+  :when (executable-find "fcitx")
   :defer 5
   :config
   (fcitx-aggressive-setup))
